--- a/.env.development
+++ b/.env.development
@@ -51,5 +51,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-MERCADO_PAGO_PUBLIC_KEY={{ YOUR_PUBLIC_KEY }}
-MERCADO_PAGO_ACCESS_TOKEN={{ YOUR_ACCESS_TOKEN }}
+MERCADO_PAGO_PUBLIC_KEY=YOUR_PUBLIC_KEY
+MERCADO_PAGO_ACCESS_TOKEN=YOUR_ACCESS_TOKEN
